feat: API Model Prediction
